syntax = "proto3";

package upload;

option go_package = "./;proto";

service UploadService {
    rpc UploadImage(UploadImageRequest) returns (UploadImageResponse){};
}

message UploadImageRequest {
    string file_name = 1;
    bytes image_data = 2;
}

message UploadImageResponse {
    string image_url = 1;
}